change readme.md and change in swagger
